--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 
 <head>
+	<!-- WEBSITE TITLE -->
 	<title>Jacob's Portfolio | About</title>
+	<!-- RESPONSIVE VIEWPORT -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- CSS RESET LINK -->
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<!-- CUSTOM CSS LINK -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
@@ -15,26 +19,36 @@
 	<!-- HEADER SECTION -->
 	<div id="header">
 	  <div  id="header-content">
+
+	  <!-- PAGE LOGO -->
 		<div id="name">
 			<h1 id="top_name">Jacob Erling</h1>
 		</div>
+		<!-- END PAGE LOGO -->
 
+		<!-- PAGE NAVIGATION -->
 		<div id="nav">
 			<h3><a href="index.html">ABOUT</a> | <a href="portfolio.html">PORTFOLIO</a> | <a href="contact.html">CONTACT</a></h3>
 		</div>
+		<!-- END PAGE NAVIGATION -->
+
 	  </div>
 	</div>
+	<!-- END HEADER SECTION -->
 
 	<!-- MAIN SECTION -->
 	<div class="content">
 		<br><br><br><br><br>
 
+		<!-- INFO CARD -->
 		<div class="main-box">
 			<h1 class="teal">About Me</h1>
 			<hr>
 			<br>
+				<!-- PROFILE PICTURE -->
 				<img id="profile" src="assets/images/profile.jpg" alt="Jacob Erling">
-
+				
+				<!-- ABOUT ME CONTENT -->
 				<p>
 					Hey I'm Jacob and I'm on my journey to become a full-time Web Developer! I have had a passion for coding for many years now and have finally decided to turn my hobby into a career. I'm very excited about my journey and the things I will learn in the upcoming weeks.
 				</p>
@@ -42,9 +56,12 @@
 				<p>
 					I'm not sure if I'd prefer to be a Frontend Developer, a Backend Developer, or a Fullstack Developer yet, but I am very happy to be able to have the opportunity to pick which path is best for me in the near future!
 				</p>
+				<!-- END ABOUT ME CONTENT -->
 			
 		</div>
+		<!-- END INFO CARD -->
 
+		<!-- CONNECT CARD -->
 		<div id="connect">
 			<h1 class="teal">Connect with Me</h1>
 			<hr>
@@ -53,16 +70,17 @@
 				<a href="https://www.linkedin.com/in/jacob-erling-023922140/" target="_blank"><img class="icon" src="assets/images/linked.png" alt="LinkedIn"></a>
 				<a href="http://stackoverflow.com/users/8010900/jacob-erling" target="_blank"><img class="icon" src="assets/images/stack.png" alt="StackOverflow"></a>
 
-
 		</div>
+		<!-- END CONNECT CARD -->
 		<br><br><br><br><br>		
 	</div>
+	<!-- END MAIN SECTION -->
 
 	<!-- FOOTER -->
-
-    <div id="footer">
+  <div id="footer">
 		<p id="copyright">&copy; copyright 2017 Jacob Erling</p>
-	</div>	
+	</div>
+	<!-- END FOOTER -->
 
 </body>
 
