--- a/portfolio.html
+++ b/portfolio.html
@@ -2,9 +2,13 @@
 <html>
 
 <head>
+	<!-- WEBSITE TITLE -->
 	<title>Jacob's Portfolio | Portfolio</title>
+	<!-- RESPONSIVE VIEWPORT -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- RESET CSS LINK -->
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<!-- CUSTOM CSS LINK -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -13,37 +17,45 @@
 
 	<!-- HEADER SECTION -->
 	<div id="header">
+		<!-- PAGE LOGO -->
 		<div id="name">
 			<h1 id="top_name">Jacob Erling</h1>
 		</div>
+		<!-- END PAGE LOGO -->
 
+		<!-- PAGE NAVIGATION -->
 		<div id="nav">
 			<h3><a href="index.html">ABOUT</a> | <a href="portfolio.html">PORTFOLIO</a> | <a href="contact.html">CONTACT</a></h3>
 		</div>
+		<!-- END PAGE NAVIGATION -->
 	</div>
+	<!-- END HEADER SECTION -->
 
 	<!-- MAIN SECTION -->
 	<div class="content">
 		<br><br><br><br><br>
 
+		<!-- PORTFOLIO CARD -->
 		<div class="main-box">
 			<h1 class="teal">Portfolio</h1>
 			<hr>
 			<br>
+
 				<div class="img-center">
-
-				<img class="block" src="assets/images/movie_1.jpg" alt="Movie 1">
-				<img class="inline" src="assets/images/movie_2.jpg" alt="Movie 2">
-				<img class="inline" src="assets/images/movie_3.jpg" alt="Movie 3">
-				<img class="block" src="assets/images/movie_4.jpg" alt="Movie 4">
-
-
+					<!-- PROJECT ONE -->
+					<img class="block" src="assets/images/movie_1.jpg" alt="Movie 1">
+					<!-- PROJECT TWO -->
+					<img class="inline" src="assets/images/movie_2.jpg" alt="Movie 2">
+					<!-- PROJECT THREE -->
+					<img class="inline" src="assets/images/movie_3.jpg" alt="Movie 3">
+					<!-- PROJECT FOUR -->
+					<img class="block" src="assets/images/movie_4.jpg" alt="Movie 4">
 				</div>
 
-				
-			
 		</div>
+		<!-- END PORTFOLIO CARD -->
 
+		<!-- CONNECT CARD -->
 		<div id="connect">
 			<h1 class="teal">Connect with Me</h1>
 			<hr>
@@ -52,15 +64,17 @@
 				<a href="https://www.linkedin.com/in/jacob-erling-023922140/" target="_blank"><img class="icon" src="assets/images/linked.png" alt="LinkedIn"></a>
 				<a href="http://stackoverflow.com/users/8010900/jacob-erling" target="_blank"><img class="icon" src="assets/images/stack.png" alt="StackOverflow"></a>
 
-
 		</div>
+		<!-- END CONNECT CARD -->
 		<br><br><br><br><br>		
 	</div>
+	<!-- END MAIN SECTION -->
 
 	<!-- FOOTER -->
 	<div id="footer">
 		<p id="copyright">&copy; copyright 2017 Jacob Erling</p>
 	</div>
+	<!-- END FOOTER -->
 
 </body>
 </html>
