--- a/contact.html
+++ b/contact.html
@@ -2,35 +2,44 @@
 <html>
 
 <head>
+	<!-- PAGE TITLE -->
 	<title>Jacob's Portfolio | Contact</title>
+	<!-- RESPONSIBE VIEWPORT -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- RESET CSS LINK -->
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<!-- CUSTOM CSS LINK -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
 
 </head>
 
 <body>
-
 	<!-- HEADER SECTION -->
 	<div id="header">
+		<!-- PAGE LOGO -->
 		<div id="name">
 			<h1 id="top_name">Jacob Erling</h1>
 		</div>
+		<!-- END PAGE LOGO -->
 
+		<!-- PAGE NAVIGATION -->
 		<div id="nav">
 			<h3><a href="index.html">ABOUT</a> | <a href="portfolio.html">PORTFOLIO</a> | <a href="contact.html">CONTACT</a></h3>
 		</div>
+		<!-- END PAGE NAVIGATION -->
 	</div>
+	<!-- END HEADER SECTION -->
 
 	<!-- MAIN SECTION -->
 	<div class="content">
 		<br><br><br><br><br>
 
+		<!-- CONTACT CARD -->
 		<div id="contact">
 			<h1 class="teal">Contact Me</h1>
 			<hr>
 			<br>
+				<!-- CONTACT FORM -->
 				<form action="" method="post">
 				    <fieldset>
 				      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
@@ -45,9 +54,12 @@
 				      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
 				    </fieldset>
 				 </form>
+				 <!-- END CONTACT FORM -->
 			
 		</div>
+		<!-- END CONTACT CARD -->
 
+		<!-- CONNECT CARD -->
 		<div id="connect">
 			<h1 class="teal">Connect with Me</h1>
 			<hr>
@@ -56,15 +68,17 @@
 				<a href="https://www.linkedin.com/in/jacob-erling-023922140/" target="_blank"><img class="icon" src="assets/images/linked.png" alt="LinkedIn"></a>
 				<a href="http://stackoverflow.com/users/8010900/jacob-erling" target="_blank"><img class="icon" src="assets/images/stack.png" alt="StackOverflow"></a>
 
-
 		</div>
+		<!-- END CONNECT CARD -->
 		<br><br><br><br><br>		
 	</div>
+	<!-- END MAIN SECTION -->
 
 	<!-- FOOTER -->
 	<div id="footer">
 		<p id="copyright">&copy; copyright 2017 Jacob Erling</p>
 	</div>
+	<!-- END FOOTER -->
 
 </body>
 </html>
