--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
 			<h1 class="teal">Connect with Me</h1>
 			<hr>
 			<br>
+				<!-- GITHUB LINK -->
 				<a href="https://github.com/Jerling1989" target="_blank"><img class="icon" src="assets/images/git.png" alt="GitHub"></a>
+				<!-- LINKEDIN LINK -->
 				<a href="https://www.linkedin.com/in/jacob-erling-023922140/" target="_blank"><img class="icon" src="assets/images/linked.png" alt="LinkedIn"></a>
+				<!-- STACK OVERFLOW LINK -->
 				<a href="http://stackoverflow.com/users/8010900/jacob-erling" target="_blank"><img class="icon" src="assets/images/stack.png" alt="StackOverflow"></a>
 
 		</div>
